--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,12 +1,19 @@
-.intro{
+@import "../../global.scss";
+
+.intro {
   background-color: white;
   display: flex;
 
-  .left{
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left {
     flex: 0.5;
     overflow: hidden;
 
-    .imgContainer{
+    .imgContainer {
       width: 700px;
       height: 700px;
       background-color: orange;
@@ -16,16 +23,24 @@
       justify-content: center;
       float: right;
 
-      img{
-        height: 90%
+      @include mobile{
+        align-items: flex-start;
+      }
+
+      img {
+        height: 90%;
+
+        @include mobile{
+          height: 50%;
+        }
       }
     }
   }
-  .right{
+  .right {
     flex: 0.5;
     position: relative;
 
-    .wrapper{
+    .wrapper {
       width: 100%;
       height: 100%;
       padding-left: 50px;
@@ -33,51 +48,63 @@
       flex-direction: column;
       justify-content: center;
 
-      h1{
+      @include mobile{
+        padding-left: 0;
+        align-items: center;
+      }
+
+      h1 {
         font-size: 60px;
         margin: 10px 0;
+
+        @include mobile{
+          font-size: 40px;
+        }
       }
-      h2{
+      h2 {
         font-size: 35px;
       }
-      h3{
+      h3 {
         font-size: 30px;
 
-        span{
+        @include mobile{
+          font-size: 20px;
+        }
+
+        span {
           font-size: inherit;
           color: purple;
         }
 
-        .ityped-cursor{
+        .ityped-cursor {
           animation: blink 1s infinite;
         }
 
         @keyframes blink {
-          50%{
-            opacity: 1;
-          }
-          100%{
-            opacity: 0;
-          }
+            50%{
+                opacity: 1;
+            }
+            100%{
+                opacity: 0;
+            }
         }
       }
     }
-    a{
+    a {
       position: absolute;
       bottom: 10px;
       left: 40%;
 
-      img{
+      img {
         width: 30px;
         animation: arrowBlink 2s infinite;
       }
+
       @keyframes arrowBlink {
-        100%{
+        100% {
           opacity: 0;
         }
       }
     }
-
-
   }
 }
