--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -7,7 +7,11 @@
   border-radius: 10px;
   cursor: pointer;
 
-  &.active{
+  @include mobile{
+    margin-right: 20px;
+  }
+
+  &.active {
     background-color: $mainColor;
     color: white;
   }
