--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,5 @@
 @import "../../global.scss";
 
-
-
 .topbar{
   width: 100%;
   height: 70px;
@@ -36,6 +34,10 @@
         display: flex;
         align-items: center;
         margin-left: 30px;
+
+        @include mobile{
+          display: none;
+        }
 
         .icon{
           font-size: 18px;
