--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,40 +1,51 @@
-.works{
-  background-color: crimson;
+@import "../../global.scss";
+
+.works {
+  background-color: orange;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 
-  .arrow{
+  .arrow {
     height: 50px;
     position: absolute;
     cursor: pointer;
 
-    &.left{
+    @include mobile {
+      display: none;
+    }
+
+    &.left {
       left: 100px;
       transform: rotateY(180deg);
     }
 
-    &.right{
+    &.right {
       right: 100px;
-
     }
   }
 
-  .slider{
+  .slider {
     height: 350px;
     display: flex;
     position: absolute;
     left: 0;
     transition: all 1s ease-out;
 
-    .container{
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .container {
       width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
 
-      .item{
+      .item {
         width: 700px;
         height: 100%;
         background-color: white;
@@ -43,49 +54,70 @@
         align-items: center;
         justify-content: center;
 
-        .left{
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
+
+        .left {
           flex: 4;
           height: 80%;
           display: flex;
           align-items: center;
           justify-content: center;
 
-          .leftContainer{
+          .leftContainer {
             width: 90%;
             height: 70%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
 
-            .imgContainer{
+            .imgContainer {
               width: 40px;
               height: 40px;
               border-radius: 50%;
-              background-color: orange;
+              background-color: rgb(245, 179, 155);
               display: flex;
               align-items: center;
               justify-content: center;
 
-              img{
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
+              img {
                 width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
               }
             }
-            h2{
+            h2 {
               font-size: 20px;
+
+              @include mobile{
+                font-size: 13px;
+              }
             }
-            p{
+            p {
               font-size: 13px;
+              @include mobile{
+                display: none;
+              }
             }
-            span{
+            span {
               font-size: 12px;
               font-weight: 600;
-              text-decoration:underline;
-              cursor:pointer;
+              text-decoration: underline;
+              cursor: pointer;
             }
           }
-
         }
-        .right{
+        .right {
           flex: 8;
           height: 100%;
           display: flex;
@@ -93,14 +125,12 @@
           justify-content: center;
           overflow: hidden;
 
-          img{
+          img {
             width: 400px;
             transform: rotate(-10deg);
-
           }
         }
       }
     }
   }
-
 }
